# open-canvas

./: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: validate.yml
e2e/: chaos-explorer.spec.ts  p2p-sync.spec.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  p2p_core.rs
src/components/: Canvas.tsx  ChaosExplorer.tsx  NodeComponent.tsx  Sidebar.tsx  ZenFocusOverlay.tsx
src/services/: db.ts  p2p.ts
src/tests/: crdt.test.ts
test-results/: .last-run.json
test-results/p2p-sync-multi-peer-P2P-sy-7684e-es-bidirectional-node-edits-chromium/: error-context.md
