[package]
name = "open-canvas"
version = "0.1.0"
description = "Neuro-inclusive local-first cognitive workspace"
authors = ["Open Canvas Contributors"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["full"] }
futures = "0.3"
local-ip-address = "0.5"

[dependencies.libp2p]
version = "0.52"
features = [
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "tokio",
    "macros",
    "request-response"
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
